@@ -92,8 +92,7 @@
                 <configuration>
                     <forkCount>1</forkCount>
                     <reuseForks>true</reuseForks>
-                    <argLine>@{surefire.argLine} --enable-native-access=ALL-UNNAMED</argLine>
-                    <skip>${!jacoco-agent}</skip>
+                    <argLine>@{argLine}</argLine>
                     <systemPropertyVariables>
                         <junit.jupiter.execution.parallel.enabled>false</junit.jupiter.execution.parallel.enabled>
                     </systemPropertyVariables>
@@ -117,9 +116,6 @@
                                 <goals>
                                     <goal>prepare-agent</goal>
                                 </goals>
-                                <configuration>
-                                    <propertyName>surefire.argLine</propertyName>
-                                </configuration>
                             </execution>
                             <execution>
                                 <id>report</id>
